--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,16 @@
     <!-- Footer Elements -->
 
     <!-- Copyright -->
+    <div 
+        class="fb-share-button" 
+        data-href="https://pauld0051.github.io/physcis-code/game.html" 
+        data-layout="button" 
+        data-size="large">
+        <a 
+        target="_blank" 
+        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphyscis-code%2Fgame.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">
+        Share</a></div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="https://index.html">Physics Code</a>
     </div>
@@ -166,6 +176,8 @@
    })();
 </script>
   <script src="assets/scripts/sendemail.js"></script>
+  <div id="fb-root"></div>
+  <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
   <script src="assets/scripts/dependencies.js"></script>
 
 </body>
