--- a/game.html
+++ b/game.html
@@ -16,6 +16,11 @@
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
   <title>Physics Code</title>
+<meta property="og:url"           content="https://pauld0051.github.io/physcis-code/game.html" />
+<meta property="og:type"          content="website" />
+<meta property="og:title"         content="Physics Code" />
+<meta property="og:description"   content="A free web resource for Physics students" />
+<meta property="og:image"         content="https://pauld0051.github.io/physcis-code/assets/images/logo-main.png" />
 </head>
 
 <body>
@@ -62,7 +67,7 @@
       <p class="head-text">If you're wanting to test your reaction time for the calculator, you can do so here by playing this game. The rules are very straight forward,
       but for the most accurate results, try and follow the rules as closely as possible.</p>
       <p class="head-text">Because we're dealing with reaction times between the pedals in a car, this test done by hand and mouse or touch screen may not give an 
-      accurate representation of reaction. This game is more for testing your reaction time as an estimate only.</p>
+      accurate representation of reaction time. This game tests your reaction time as an estimate only.</p>
       <p class="head-text my-0">Reaction times will vary with age, tiredness, distractions, impairment with alcohol or drugs and many other reasons.</p><br>
     </div>
   </section>
@@ -71,8 +76,8 @@
         <div class="col-12 div2">
           <h2>Test your reaction time!</h2>
           <p class="card-text">
-            Click the "start" button and then move your hand at least 20 cm from the mouse. When you start, the lamp will turn green. When the lamp turns red, 
-            click the "Brake" button. Make sure you have not moved the mouse from the start. A timer will show how long it took for you to push the brakes. 
+            Click the "start" button and then move your hand at least 20 cm from the mouse or your device. When you press start, the lamp will turn green. When the lamp turns red, 
+            click the "Brake" button. The light stays green for a random amount of time, less than 30 seconds. 
           </p>
         </div>
       </div>
@@ -89,11 +94,12 @@
             <span id="greenLightStop" class="icon_hide_greenLight green_light_icon"><br><i class="fas fa-lightbulb fa-7x"></i></span>
             </div>
             <div class="card-body">
-              <h5 class="card-title heading-center">Push the Start button
+              <h5 class="card-title heading-center" id="remove_start">Push the Start button
               </h5>
+              <h5 class="card-title heading-center remove_start" id="ready_to_brake">Get ready to hit the brakes!</h5>
               <br>
               <div class="container text-center">
-            <button  
+              <button  
             class="btn btn-danger btn-lg btn--padding"
             id="start_button" 
             onclick="makeGreen(); setTimerAmount()"
@@ -109,6 +115,7 @@
           </div>
         </div>
         <div class="col-lg-4 div3">
+        
         </div>
       </div>
 </div>
@@ -123,10 +130,10 @@
       <div class="modal-body">
        <p class="reaction_time_text" id="time"></p>
       </div>
-      <div class="modal-footer">
+        <div class="modal-footer">
         <button type="button" id="restart_test" onclick="reset_timer()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
-      </div>
-    </div>
+        </div>
+     </div>
   </div>
 </div>
 
@@ -174,6 +181,16 @@
     <!-- Footer Elements -->
 
     <!-- Copyright -->
+    <div 
+        class="fb-share-button" 
+        data-href="https://pauld0051.github.io/physcis-code/game.html" 
+        data-layout="button" 
+        data-size="large">
+        <a 
+        target="_blank" 
+        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphyscis-code%2Fgame.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">
+        Share</a></div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="https://index.html">Physics Code</a>
     </div>
@@ -187,6 +204,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/game.js"></script>
+  <div id="fb-root"></div>
+  <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
   <script src="assets/scripts/dependencies.js"></script>
 
 </body>
