--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
               class="btn btn-link" 
               role="button" 
               data-toggle="popover" 
-              data-trigger="focus" 
+              data-trigger="focus"
+              data-html="true"
               title="Reaction Time (s)" 
               data-content="Enter the time it takes for a driver to react.
               Reaction times vary with age, distractions, alcohol or drug usage etc.
@@ -227,6 +228,7 @@
               min="0" 
               max="3" 
               required><br>
+              <p>Test your reaction time <a href="game.html">here</a>.</p>
 
             </div>
           </div>
@@ -376,28 +378,28 @@
           </div>
           <div class="modal-body">
             <p>The distance the vehicle travels throughout the yellow and interphase duration : <br>
-              <span id="phaseDistance"></span>
+              <strong><span id="phaseDistance"></span></strong>
             </p>
             <p>The distance the vehicle travels throughout the duration of the reaction time : <br>
-              <span id="reactionDistance"></span>
+              <strong><span id="reactionDistance"></span></strong>
             </p>
             <p>The total distance from the stop-line required for the vehicle coming to a complete halt : <br>
-              <span id="stoppingDistance"></span>
+              <strong><span id="stoppingDistance"></span></strong>
             </p>
             <p>The Maximum Distance the vehicle is from stopline : <br>
-              <span id="maxDistance"></span>
+              <strong><span id="maxDistance"></span></strong>
             </p>
             <p>Numbers that are negative indicate a dilemma zone. Positive numbers indicate an option zone : <br>
-              <span id="total"></span>
+              <strong><span id="total"></span></strong>
             </p>
             <p>Zone : <br>
-              <span>A </span><span id="zone"></span>
+              <strong><span>A </span><span id="zone"></span></strong>
             </p>
             <p>Velocity (m/s) : <br>
-              <span id="conversion"></span>
+              <strong><span id="conversion"></span></strong>
             </p>
             <p>Intersection distance (m) : <br>
-              <span id="conversion-dist"></span>
+              <strong><span id="conversion-dist"></span></strong>
             </p>
           </div>
           <div class="modal-footer">
@@ -453,6 +455,16 @@
     <!-- Footer Elements -->
 
     <!-- Copyright -->
+    <div 
+        class="fb-share-button" 
+        data-href="https://pauld0051.github.io/physcis-code/game.html" 
+        data-layout="button" 
+        data-size="large">
+        <a 
+        target="_blank" 
+        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphyscis-code%2Fgame.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">
+        Share</a></div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="https://index.html">Physics Code</a>
     </div>
@@ -466,6 +478,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/calculator.js"></script>
+  <div id="fb-root"></div>
+  <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
   <script src="assets/scripts/dependencies.js"></script>
 
 </body>
