--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,8 @@
     </div>
     <!-- Footer Elements -->
 
-    <!-- Copyright -->
+    <!-- Copyright and Facebook share -->
+    <div class="container text-center">
     <div 
         class="fb-share-button" 
         data-href="https://pauld0051.github.io/physcis-code/game.html" 
@@ -157,6 +158,7 @@
         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphyscis-code%2Fgame.html&amp;src=sdkpreparse" 
         class="fb-xfbml-parse-ignore">
         Share</a></div>
+    </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="https://index.html">Physics Code</a>
     </div>
