--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
     <!-- Footer Elements -->
 
     <!-- Copyright -->
+    <div class="container text-center">
     <div 
         class="fb-share-button" 
         data-href="https://pauld0051.github.io/physcis-code/game.html" 
@@ -465,6 +466,7 @@
         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphyscis-code%2Fgame.html&amp;src=sdkpreparse" 
         class="fb-xfbml-parse-ignore">
         Share</a></div>
+    </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="https://index.html">Physics Code</a>
     </div>
