Added second row of cards on help page

--- a/index.html
+++ b/index.html
@@ -202,19 +202,18 @@
             <img class="card-img-top img-fluid" src="assets/images/card-images/stopwatch.png" alt="Input Reaction Time Image">
             <div class="card-body">
               <h5 class="card-title">Reaction Time (s) 
-              <a 
-              tabindex="0" 
-              class="btn btn-link" 
-              role="button" 
-              data-toggle="popover" 
-              data-trigger="focus"
-              data-html="true"
-              title="Reaction Time (s)" 
-              data-content="Enter the time it takes for a driver to react.
-              Reaction times vary with age, distractions, alcohol or drug usage etc.
-              The unit is seconds.">
-                  <i class="far fa-question-circle fa-2x"></i>
-                </a></h5>
+             <a 
+             tabindex="0" 
+             class="btn btn-link" 
+             role="button" 
+             data-toggle="popover" 
+             data-trigger="focus" 
+             title="Reaction Time (s)" 
+             data-content="Enter the time it takes for a driver to react.
+             Reaction times vary with age, distractions, alcohol or drug usage etc.
+             The unit is seconds. Try our Reaction Time game <a href='game.html' target='_blank'>here</a> to give an estimate of reaction times.">
+            <i class="far fa-question-circle fa-2x"></i>
+            </a></h5>
               <br>
               <label for="reactionTime">Reaction time in seconds</label><br>
               <input 
@@ -228,9 +227,7 @@
               min="0" 
               max="3" 
               required><br>
-              <p>Test your reaction time <a href="game.html">here</a>.</p>
-
-            </div>
+              </div>
           </div>
         </div>
         <!-- Coefficient of friction Card-->
@@ -454,7 +451,7 @@
     </div>
     <!-- Footer Elements -->
 
-    <!-- Copyright -->
+    <!-- Copyrightand Facebook Share -->
     <div class="container text-center">
     <div 
         class="fb-share-button" 
