--- a/help.html
+++ b/help.html
@@ -69,6 +69,7 @@
       <p class="head-text my-0"></p><br>
     </div>
   </section>
+  <!--First Set of Cards-->
    <section class="container">
    <div class="row">
         <div class="col-12 div2">
@@ -93,8 +94,8 @@
               <p>Velocity is a measure of the amount of distance an object travels over an amount of time in a relative direction. 
               It is common to use the SI units of ms<sup>-1</sup>, however, our calculator will also accept kilometres per hour (kmh<sup>-1</sup>) or miles per hour (mph).
               The conversion into ms<sup>-1</sup> is done for you.</p>
-              <p>The equation to use: \[velocity = { dist_{total} \over time}\]</p>
-              <p>It is common in this case to begin by using the speed limit at the intersection before trying alternatives such as driving too slow or too fast.<p>
+              <p>The equation to use: \[velocity = { distance \over time}\]</p>
+              <p>It is common in this case to begin by using the speed limit at the intersection before trying alternatives such as driving too slow or too fast.</p>
              </div>
           </div>
       </div>
@@ -121,7 +122,7 @@
       </div>
       <div class="row">
        <div class="col-lg-4 div3">
-          <div class="card shadow" id="card-help-yellow">
+          <div class="card shadow" id="card-help-red">
             <img class="card-img-top img-fluid" src="assets/images/card-images/red.png" alt="Red Light Image">
             <div class="card-body">
               <h5 class="card-title">Interhase</h5>
@@ -129,7 +130,7 @@
           </div>
         </div>
       <div class="col-lg-8 div3">
-          <div class="card shadow" id="card-help-text-yellow">
+          <div class="card shadow" id="card-help-text-red">
             <div class="card-body">
               <p>During the interphase all traffic signals at an intersection are red. This time is predetermined but usually is around 1 to 2 seconds.</p>
               <p>The distance a vehicle travels through the duration of the interphase is added onto the yellow phase time.</p>
@@ -138,6 +139,81 @@
              </div>
           </div>
       </div>
+      </div>
+<!-- Second Set of Cards-->
+      <div class="row">
+        <div class="col-12 div2">
+          <h2>Reaction Time, Friction and Intersection Size</h2>
+          <p class="card-text">
+            Here we discuss the best methods to determine the reaction time of a driver, the friction between the vehicle and the road and the size of an intersection. 
+          </p>
+        </div>
+      </div>
+      <div class="row">
+       <div class="col-lg-4 div3">
+          <div class="card shadow" id="card-help-reaction-time">
+            <img class="card-img-top img-fluid" src="assets/images/card-images/stopwatch.png" alt="Stopwatch Image">
+            <div class="card-body">
+              <h5 class="card-title">Reaction Time</h5>
+             </div>
+          </div>
+        </div>
+<div class="col-lg-8 div3">
+          <div class="card shadow" id="card-help-text-reaction-time">
+            <div class="card-body">
+              <p>Reaction time is a measure of how quickly a person reacts to a stimulus. In this case, how quickly a person reacts to seeing a yellow signal light.  
+              The unit is almost always seconds, and can commonly be less than 1 second. However, many variables come into play when assessing reaction times.</p>
+              <p>There is no equation you can use to determine reaction time, other than trying it experimentally. We have designed a reaction time game that may
+              help determine your reaction time or that of other people. See the <a href="game.html" target="_blank">reaction time game</a> 
+              to run various estimates and averages for reaction times.</p>
+              </div>
+          </div>
+      </div>
+      </div>
+      <div class="row">
+       <div class="col-lg-4 div3">
+          <div class="card shadow" id="card-help-friction">
+            <img class="card-img-top img-fluid" src="assets/images/card-images/friction.png" alt="Friction Image">
+            <div class="card-body">
+              <h5 class="card-title">Coefficient of Friction</h5>
+             </div>
+          </div>
+        </div>
+<div class="col-lg-8 div3">
+          <div class="card shadow" id="card-help-text-friction">
+            <div class="card-body">
+              <p>The coefficient of friction (μ) is a unitless number between 0 and 1. The lowest possible friction would be zero, however, this is not
+              logical or plausible in a real world context as this would suggest a complete frictionless system. Conversely, the highest possible friction 
+              would be one. Again, this would not be plausible as movement would then become impossible. You can estimate μ by using real world data. 
+              Good road conditions and good tires on the vehicle could see a range for μ between 0.67 and 0.75. Icy conditions could see μ as low as 0.3. For 
+              more data you can check <a href="https://www.semanticscholar.org/paper/On-the-road-friction-recognition-based-on-the-Hui-Min/d164c2387684690754164580fa9eb16d0ec0eb9f/figure/0" target="_blank"> 
+              here</a>.</p> 
+             </div>
+          </div>
+      </div>
+      </div>
+      <div class="row">
+       <div class="col-lg-4 div3">
+          <div class="card shadow" id="card-help-intersection">
+            <img class="card-img-top img-fluid" src="assets/images/card-images/intersection.png" alt="Intersection Image">
+            <div class="card-body">
+              <h5 class="card-title">Intersection Size</h5>
+             </div>
+          </div>
+        </div>
+      <div class="col-lg-8 div3">
+          <div class="card shadow" id="card-help-text-intersection">
+            <div class="card-body">
+              <p>There are a few methods to measuring intersection distances, the most precise method is being there. However, scaled maps on Google and Bing have
+              provided a chance to estimate the size of various intersections around the world. Although, ultimately, the next best method would be to have the 
+              engineering plans of the intersection. If these are available you can use the dilemma zone calculator to plot out the location of dilemma and option 
+              zones. Typically you'd measure the intersection in metres. However, our calculator can convert yards into metres for you.</p>
+              <p>An intersection is measured from stop line to opposite stop line. Currently, the calculator is not geared for perpindicular roads.</p>
+             </div>
+          </div>
+      </div>
+      </div>
+      <!--Third Set of Cards-->
    </section>
 
  <!-- Footer -->
