Fixed mathjax equation extending offscreen on small devices

--- a/help.html
+++ b/help.html
@@ -262,9 +262,9 @@
         <div class="card shadow" id="card-help-text-final">
           <div class="card-body">
             <p>The final equation requires all the inputs for each variable.
-            \[dist_{final} = { dist_{total} - dist_{intersection} - length}\]
+            \[dist_{final} =\] \[{ dist_{total} - dist_{intersection} - length}\]
             \[dist_{stopping} = { velocity^2 \over 2 \; μ \; g}\]
-            \[zone = {dist_{final} - (dist_{stopping} + dist_{reaction})}\]
+            \[zone =\] \[{dist_{final} - (dist_{stopping} + dist_{reaction})}\]
             Where g = 9.81 ms<sup>-2</sup></p>
             <p>If <em>zone</em> is negative, then a dilemma zone exists. If <em>zone</em> is positive, then an option zone exists.</p>
           </div>
@@ -339,7 +339,7 @@
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
   <script src="assets/scripts/dependencies.js"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </body>
 
 </html>
