Added Facebook share button to game modal - prototype not sending result through

--- a/game.html
+++ b/game.html
@@ -131,6 +131,7 @@
        <p class="reaction_time_text" id="time"></p>
       </div>
         <div class="modal-footer">
+        <button type="button" id="share_button" onclick="share_result()" class="btn fb--button">Share<i class="fab fa-facebook-f fa-lg mx-1"></i></button>
         <button type="button" id="restart_test" onclick="reset_timer()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
         </div>
      </div>
