Fixed Facebook share button added privacy policy for Facebook app usage

--- a/index.html
+++ b/index.html
@@ -465,7 +465,8 @@
         Share</a></div>
     </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://index.html">Physics Code</a>
+      <a href="index.html">Physics Code</a><br>
+      <a href="privacy.html">Privacy Policy</a>
     </div>
     <!-- Copyright -->
 
