Added t&c for Facebook app usage

--- a/privacy.html
+++ b/privacy.html
@@ -186,7 +186,8 @@
     </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="privacy.html">Privacy Policy</a><br>
+      <a href="terms.html">Terms and Conditions</a>
     </div>
     <!-- Copyright -->
 
