--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
   <title>Physics Code</title>
+  <meta property="og:url"           content="https://pauld0051.github.io/physcis-code/game.html" />
+<meta property="og:type"          content="website" />
+<meta property="og:title"         content="Physics Code" />
+<meta property="og:description"   content="A free web resource for Physics students" />
+<meta property="og:image"         content="https://pauld0051.github.io/physcis-code/assets/images/logo-main.png" />
 </head>
 
 <body>
