Fixed links in footer

--- a/game.html
+++ b/game.html
@@ -185,7 +185,7 @@
     <div class="container text-center">
     <div 
         class="fb-share-button" 
-        data-href="https://pauld0051.github.io/physcis-code/game.html" 
+        data-href="https://pauld0051.github.io/physcis-code/index.html" 
         data-layout="button" 
         data-size="large">
         <a 
