--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
   <title>Physics Code</title>
-  <meta property="og:url"           content="https://pauld0051.github.io/physcis-code/game.html" />
+<meta property="og:url"           content="https://pauld0051.github.io/physcis-code/index.html" />
 <meta property="og:type"          content="website" />
 <meta property="og:title"         content="Physics Code" />
 <meta property="og:description"   content="A free web resource for Physics students" />
@@ -62,7 +62,7 @@
     </nav>
   </header>
   <section>
-    <div class="container div1">
+      <div class="container div1">
       <h1>Dilemma Zone Calculator</h1>
       <p class="head-text">Add your variables to the calculator - you will need to supply all the variables before being able to
         calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our <a href="help.html"> help</a> page.</p>
@@ -460,7 +460,7 @@
     <div class="container text-center">
     <div 
         class="fb-share-button" 
-        data-href="https://pauld0051.github.io/physcis-code/game.html" 
+        data-href="https://pauld0051.github.io/physcis-code/index.html" 
         data-layout="button" 
         data-size="large">
         <a 
