--- a/privacy.html
+++ b/privacy.html
@@ -98,7 +98,7 @@
 
 <h2>Advertising Partners Privacy Policies</h2>
 
-<P>You may consult this list to find the Privacy Policy for each of the advertising partners of Physics Code.</p>
+<p>You may consult this list to find the Privacy Policy for each of the advertising partners of Physics Code.</p>
 
 <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Physics Code, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
 
@@ -180,7 +180,7 @@
 
     <!-- Copyright and Facebook share-->
     <div class="container text-center">
-      <div class="fb-share-button" data-href="https://pauld0051.github.io/physcis-code/game.html" data-layout="button" data-size="large">
+      <div class="fb-share-button" data-href="https://pauld0051.github.io/physcis-code/index.html" data-layout="button" data-size="large">
         <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphyscis-code%2Fgame.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
           Share</a></div>
     </div>
