--- a/terms.html
+++ b/terms.html
@@ -151,7 +151,7 @@
 
     <!-- Copyright and Facebook share-->
     <div class="container text-center">
-      <div class="fb-share-button" data-href="https://pauld0051.github.io/physcis-code/game.html" data-layout="button" data-size="large">
+      <div class="fb-share-button" data-href="https://pauld0051.github.io/physcis-code/index.html" data-layout="button" data-size="large">
         <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphyscis-code%2Fgame.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
           Share</a></div>
     </div>
