--- a/game.html
+++ b/game.html
@@ -105,7 +105,7 @@
             onclick="makeGreen(); setTimerAmount()"
             >Start</button>
             <button type="submit"
-            class="btn btn-danger btn-lg btn--padding btn_hide_brakes"
+            class="btn btn-danger btn-lg btn_hide_brakes"
             id="brake_button"
             >Brakes</button>
              
