Fixed missing semicolon in game.js

--- a/game.html
+++ b/game.html
@@ -128,10 +128,9 @@
         </div>
       <div class="modal-body">
        <p class="reaction_time_text" id="time"></p><br><br>
-       <p class="reaction_time_text" id="best_score"></p>
+       <p class="best_score_text" id="best_score"></p>
       </div>
         <div class="modal-footer">
-        <p>Share your best time with friends --></p>
         <button type="button" id="share_button" onclick="share_result()" class="btn fb--button"><i class="fab fa-facebook-f fa-lg mr-2"></i>Share</button>
         <button type="button" id="restart_test" onclick="reset_timer()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
         </div>
